[metadata]
name = robustbase
version = attr: robustbase.version.__version__
description = A Python Based Library to Calculate Estimators (Sn, Qn, MAD, IQR)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deepak7376/robustbase
author = Deepak Yadav
author_email = dky.united@gmail.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Mathematics
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = robust statistics robustness Sn Qn MAD IQR

[options]
packages = find:
include_package_data = true
python_requires = >=3.0
install_requires =
    certifi>=2019.11.28
    docutils>=0.15.2
    numpy>=1.18.0
    statistics>=1.0.3.5

[options.packages.find]
where = robustbase

[options.extras_require]
dev =
    pytest>=6.0.0
    pytest-cov>=2.10.0
    coverage>=5.0
    flake8>=3.8.0

[flake8]
max-line-length = 88
exclude =
    .git,
    __pycache__,
    dist,
    build,
    .tox

[tool:pytest]
addopts = --cov=robustbase --cov-report=term-missing

[aliases]
test = pytest
